# math-research-tools

./: .dockerignore  .gitignore  Dockerfile  README.md  knowledge_graph.html  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: ship-initialized
.github/workflows/: ci.yml  deploy.yml
commands/: knowledge-graph.md  lit-review.md
configs/: audiology.yaml  chemistry.yaml  evolutionary-computation.yaml  knowledge-graphs.yaml  math.yaml
kg/: __init__.py  agent.py  config.py  extract.py  graph.py  ingest.py  level2.py  llm.py  structural_holes.py  summaries.py  survey.py  utils.py  visualize.py
scripts/: setup-gcp-wif.sh
tests/: conftest.py  test_api.py  test_config.py  test_e2e.py  test_extract.py  test_graph.py  test_ingest.py  test_lit_review.py  test_structural_holes.py  test_survey.py
tests/fixtures/: sample.md  sample.txt
web/: __init__.py  app.py
web/static/: app.js  explore.html  index.html  style.css  survey.html
