[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "instinct-kg"
version = "0.2.0"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0",
    "PyMuPDF>=1.23",
    "chromadb>=0.4",
    "fastapi>=0.104",
    "uvicorn[standard]>=0.24",
    "python-multipart>=0.0.6",
    "anthropic>=0.18",
    "networkx>=3.0",
    "requests>=2.28",
    "pyyaml>=6.0",
]

[tool.setuptools.packages.find]
include = ["kg*", "web*"]

[tool.setuptools.package-data]
web = ["static/**/*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
